--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
   lottie: ^3.1.3
-  cupertino_icons: ^1.0.8
+  animated_text_kit: ^4.2.2
+  cupertino_icons: ^1.0.6
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
+  flutter_spinkit: ^5.2.0
+  google_sign_in: ^6.2.1
+  image_picker: ^0.8.6
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
